Fix bug with z-index

--- a/sources/easygenerator.Web/Content/question.less
+++ b/sources/easygenerator.Web/Content/question.less
@@ -148,12 +148,12 @@
           left: 0;
           right: 0;
           bottom: 0;
-          z-index: 10000;
           display: none;
           -webkit-align-items: center;
           align-items: center;
           -webkit-justify-content: center;
           justify-content: center;
+          z-index: 1500;
 
           &.shown{
               display: flex;
